--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,92 @@
     <title>RunSmart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="img/logo.png" alt="">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/timer-icon.png" alt="timer-icon">
+                        Время подбора:
+                        10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/delivery-icon.png" alt="delivery-icon">
+                        Бесплатная
+                        доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/message-icon.png" alt="message-icon">
+                        Ответим
+                        на все вопросы
+                    </div>
+                </div>
+
+                <button class="button button_main">заказать консультацию</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="advantages">
+        <div class="container">
+            <h2 class="advantages__header">
+                НАШИ ПРЕИМУЩЕСТВА
+            </h2>
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <img src="icons/cup-icon.png" alt="cup-icon">
+                    <h3 class="advantages__subheader">Делимся опытом</h3>
+                    <div class="advantages__descr">
+                        Наши сотрудники всегда готовы поделиться своим опытом, 
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart-icon.png" alt="heart-icon">
+                    <h3 class="advantages__subheader">Заботимся о здоровье</h3> 
+                    <div class="advantages__descr">
+                        Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!                        
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe-icon.png" alt="shoe-icon">
+                    <h3 class="advantages__subheader">Учим бегать</h3>
+                    <div class="advantages__descr">
+                        Помогаем с обучением 
+                        правильной технике бега! 
+                        Дружим с крупнейшей школой бега в России -   <a href="#">I LOVE RUNNING.</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
